[package]
edition = "2021"
name = "more_collections"
version = "0.13.2"
authors = ["Rinde van Lon <rindevanlon@gmail.com>"]
description = "Additional collections not found in std::collections"
repository = "https://github.com/rinde/more_collections/"
homepage = "https://github.com/rinde/more_collections/"
license = "Apache-2.0"
keywords = ["collections", "multimap"]
categories = ["data-structures"]
include = ["LICENSE", "README.md", "**/*.rs", "Cargo.toml"]

[features]
all = ["hashsetmultimap", "hashvecmultimap", "indexsetmultimap", "indexvecmultimap", "smallset", "smallmap", "vecmap"]
hashsetmultimap = ["maplit"]
hashvecmultimap = []
indexsetmultimap = ["indexmap"]
indexvecmultimap = ["indexmap"]
smallmap = ["indexmap", "smallvec"]
smallset = ["indexmap", "smallvec", "smallmap"]
vecmap = []

[dependencies]
indexmap = { version = "2.1.0", optional = true }
maplit = { version = "1.0.2", optional = true }
smallvec = {version = "1.11.2", features = ["const_generics", "const_new", "union"], optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
indexmap = { version = "2.1.0" }
maplit = { version = "1.0.2" }
more_collections = { path=".", features = ["all"]}
rand = "0.8.5"
itertools = "0.12.0"

[[bench]]
name = "vec_map"
harness = false

[profile.bench]
lto = true

[lints.rust]
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "deny"
# missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
# missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_tuple_struct_fields = "warn"
unused = "warn"


[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "allow"

[lints.clippy]
correctness = "deny"
suspicious = "warn"
complexity = "warn"
perf = "deny"
cargo = "warn"
style = "warn"
todo = "deny"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
cloned_instead_of_copied = "warn"
checked_conversions = "warn"
filter_map_next = "warn"
manual_instant_elapsed = "warn"
cast_possible_wrap = "warn"
cast_lossless = "warn"

cast_possible_truncation = "warn"
copy_iterator = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
# into_iter_without_iter = "warn"
# iter_without_into_iter = "warn"
iter_not_returning_iterator = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
# missing_errors_doc = "warn"
missing_fields_in_debug = "warn"
# missing_panics_doc = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
