[package]
edition = "2021"
name = "more_collections"
version = "0.13.4"
authors = ["Rinde van Lon <rindevanlon@gmail.com>"]
description = "Additional collections not found in std::collections"
repository = "https://github.com/rinde/more_collections/"
homepage = "https://github.com/rinde/more_collections/"
license = "Apache-2.0"
keywords = ["collections", "multimap"]
categories = ["data-structures"]
include = ["LICENSE", "README.md", "**/*.rs", "Cargo.toml"]

[features]
all = ["hashsetmultimap", "hashvecmultimap", "indexsetmultimap", "indexvecmultimap", "smallset", "smallmap", "vecmap"]
hashsetmultimap = ["maplit"]
hashvecmultimap = []
indexsetmultimap = ["indexmap"]
indexvecmultimap = ["indexmap"]
smallmap = ["indexmap", "smallvec"]
smallset = ["indexmap", "smallvec", "smallmap"]
vecmap = []

[dependencies]
indexmap = { version = "2.1.0", optional = true }
maplit = { version = "1.0.2", optional = true }
smallvec = {version = "1.11.2", features = ["const_generics", "const_new", "union"], optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
indexmap = { version = "2.1.0" }
maplit = { version = "1.0.2" }
more_collections = { path=".", features = ["all"]}
rand = "0.8.5"
itertools = "0.12.0"

[[bench]]
name = "vec_map"
harness = false

[profile.bench]
lto = true

[lints.rust]
# lint groups
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "deny"
unused = "warn"

# specific lints that are allow by default
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
# missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
dead_code = "warn"
single_use_lifetimes = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "allow"

[lints.clippy]
cargo = "warn"
complexity = "warn"
correctness = "deny"
perf = "warn"
style = "warn"
suspicious = "deny"
todo = "warn"

missing_const_for_fn = "warn"

### Pedantic
pedantic = { level = "warn", priority = -1 } # setting a lower priority for the group to allow individual overrides

# Below are the pedantic lints that we currently do not opt in to including the reason why.
missing_panics_doc = "allow"
module_name_repetitions = "allow" # naming is already hard enough

[package.metadata.docs.rs]
all-features = true
